# SystemyOperacyjne

cw-01/zad1/: CMakeLists.txt  library.c  library.h  main.c
cw-01/zad2/: CMakeLists.txt  library.c  library.h  main.c  raport2.txt
cw-01/zad3a/: CMakeLists.txt  library.c  main.c  main_dynamic.c  results3a.txt
cw-01/zad3b/: CMakeLists.txt  library.h  main.c  main_dynamic.c  results3b.txt
cw-02/zad1/: CMakeLists.txt  main.c  wyniki.txt
cw-02/zad2/: CMakeLists.txt  main.c  main_nftw.c
cw-03/zad1/: CMakeLists.txt  main.c
cw-03/zad2/: CMakeLists.txt  main.c
cw-03/zad3/: CMakeLists.txt  main.c  tester.c
cw-04/zad1/: CMakeLists.txt  dateprint  main.c  main2.c
cw-04/zad2/: CMakeLists.txt  main.c
